fix: scroll on mobile

--- a/src/components/pages/onboarding/Onboarding.module.scss
+++ b/src/components/pages/onboarding/Onboarding.module.scss
@@ -1,10 +1,10 @@
 @import "../../../assets/scss/variables";
 
 .inner {
-  height:         100vh;
   position:       relative;
   display:        flex;
   flex-direction: column;
+  flex:           1 1 auto;
   h2 {
     display:     flex;
     align-items: center;
@@ -100,8 +100,10 @@
 }
 
 .register {
-  padding:    0;
-  background: linear-gradient(#757F9A, #D7DDE8);
+  display:        flex;
+  flex-direction: column;
+  padding:        0;
+  background:     linear-gradient(#757F9A, #D7DDE8);
 }
 
 .verify {
